[package]
name = "triple-a-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid", features = ["png"] }
lazy_static = "1.4.0"
maplit = "1.0.2"
strum = {version = "0.23.0", features = ["derive"]}
text_io = "0.1.9"
